--- a/index.html
+++ b/index.html
@@ -120,16 +120,21 @@
             <p class="fst-italic">
               "Inisiasi Aksi-Reaksi Wujudkan Revolusi Bersinergi."
             </p>
-            <ul>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
-            </ul>
+            <br>
+            <h3>VISI</h3>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+              Terwujudnya BEM-KM PNM sebagai wadah inklusif dan aspiratif demi memaksimalkan potensi dan meningkatkan kinerja
+              KM-PNM
             </p>
+            <br>
+            <h3>MISI</h3>
+            <ul>
+              <li><i class="bi bi-check-circle"></i> Menciptakan internal BEM-KM PNM yang loyal dan berdedikasi kepada Tri Dharma Perguruan Tinggi.</li>
+              <li><i class="bi bi-check-circle"></i> Menjalin sinergitas antar KM PNM  dan kampus sebagai bentuk kolaborasi konstruktif.</li>
+              <li><i class="bi bi-check-circle"></i> Memberi sarana penunjang kreativitas dan pengembangan diri mahasiswa melalui perkembangan teknlogi digital.</li>
+              <li><i class="bi bi-check-circle"></i> Mempererat relasi dan kolaborasi dengan eksternal.</li>
+            </ul>
+            
           </div>
         </div>
 
