--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div class="col-lg-6 order-1 order-lg-2 r" data-aos="fade-left">
                   <!-- <video src="assets/video/expo.mp4" width="100%" controls></video> -->
                   <h3>VIDIO  JANGAN DI UTIK UTIK</h3>
-                  <iframe width="100%" height="250" src="https://www.youtube-nocookie.com/embed/dSd-K9Mpzpk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <iframe width="auto" height="250" src="https://www.youtube-nocookie.com/embed/dSd-K9Mpzpk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     
                  </div>
                  
@@ -116,10 +116,10 @@
               <!-- AKHIR VIDIO -->
 
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
-            <h3>KABINET AKSELERASI</h3>
-            <p class="fst-italic">
+            <h1>KABINET AKSELERASI</h1>
+            <h3 class="fst-italic">
               "Inisiasi Aksi-Reaksi Wujudkan Revolusi Bersinergi."
-            </p>
+            </h3>
             <br>
             <h3>VISI</h3>
             <p>
