--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div class="col-lg-6 order-1 order-lg-2 r" data-aos="fade-left">
                   <!-- <video src="assets/video/expo.mp4" width="100%" controls></video> -->
                   <h3>VIDIO  JANGAN DI UTIK UTIK</h3>
-                  <iframe width="auto" height="250" src="https://www.youtube-nocookie.com/embed/dSd-K9Mpzpk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <iframe width="320" height="200" src="https://www.youtube-nocookie.com/embed/dSd-K9Mpzpk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     
                  </div>
                  
