--- a/index.html
+++ b/index.html
@@ -667,6 +667,30 @@
               <h4>Rapat Koordinasi Daerah</h4>
             </div>
           </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-lugri">
+            <img src="https://drive.google.com/uc?export=view&id=12YM5hoZ7eA8L1e2Nv63G7s7PiLf3Q838" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Sarasehan Nasional XXI</h4>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-lugri">
+            <img src="https://drive.google.com/uc?export=view&id=10HoBMaOzFJwPAZz24MdOaCU_VudXfDvr" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Seminar FKMPI</h4>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-lugri">
+            <img src="https://drive.google.com/uc?export=view&id=15j29aRR4Gl4IHt7Aib1OAPLarzqVSmcC" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Rapat Koordinasi Wilayah Jawa V</h4>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-lugri">
+            <img src="https://drive.google.com/uc?export=view&id=1t6HbUG4c5IyEjL-0LQyOnNzSG4IXbpzk" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Sambutan Walikota Madiun</h4>
+            </div>
+          </div>
 
           
           <!-- AKHIR LUGRII -->
